# github-copilot-cli

./: .gitignore  README.md  github_copilot_cli.py  pyproject.toml  requirements.txt  spec.yml
github_copilot_cli/: __main__.py
github_copilot_cli/config/: config.py  config.yml
github_copilot_cli/lib/: exec_github_copilot_chat.py  git_actions.py  logger.py
